Minor alignment fixes.

--- a/css/albumLists.css
+++ b/css/albumLists.css
@@ -10,9 +10,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (max-width: 767px) {
-	.album-year-selector {
+/*	.album-year-selector {
 		padding-left:20px;
 	}
+
+	.listInfo {
+		padding-left: 20px;
+	}*/
 
 	.container {
 		margin: 0px;
@@ -20,6 +24,10 @@ h1, h2, h3, h4, h5, h6 {
 
 	.row {
 		margin: 0px;
+	}
+
+	.album-column-art {
+		text-align: center;
 	}
 }
 
@@ -37,9 +45,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-.album-column-art {
-	/*text-align: center;*/
-}
+
 
 .album-column-info {
 
